<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_telegram_bot_token"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonSaveOrEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_token"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonDisableBattery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disable_battery"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonToggleService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_on"
        android:layout_marginTop="8dp" />

    <!-- Оборачиваем лог в ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <TextView
            android:id="@+id/textViewLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logs" />

    </ScrollView>

</LinearLayout>
