<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Настройка имен SIM-карт -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename_sims" />

        <EditText
            android:id="@+id/editTextSim1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sim1_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextSim2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/sim2_hint"
            android:inputType="text"
            android:minHeight="48dp" />
        <Switch
            android:id="@+id/switchForwardAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Пересылать от всех отправителей?"
            android:layout_marginBottom="16dp"/>

        <!-- Фильтр отправителей -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_senders" />

        <!-- Список чекбоксов с отправителями -->
        <ListView
            android:id="@+id/listViewSenders"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:choiceMode="multipleChoice"
            android:layout_marginBottom="16dp"/>

        <!-- Поле для ручного добавления отправителей -->
        <EditText
            android:id="@+id/editTextManualSender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_manual_sender"
            android:inputType="text"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonAddManualSender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_manual_sender"
            android:layout_marginBottom="16dp"/>

        <!-- Кнопка сохранить все настройки -->
        <Button
            android:id="@+id/buttonSaveSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_settings" />

    </LinearLayout>
</ScrollView>
